graphql-toolkit-writer/tests/snapshots/it_fmt_pretty_exec_document__query_with_field_and_multiple_arguments.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
{
  field1(arg1: "value1", arg2: "value2") {
    field2
  }
}
