graphql-toolkit-writer/tests/snapshots/it_fmt_pretty_exec_document__query_with_field_and_object_argument.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
{
  field(arg1: {key1: "value", key2: 1.61803}) {
    field2
  }
}
