graphql-toolkit-writer/tests/snapshots/it_fmt_pretty_exec_document__query_with_inline_fragment.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
{
  ... {
    field21
    field22
  }
  field1
}
